objects/zb1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f1__c</fullName>
        <label>f1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f2__c</fullName>
        <label>f2</label>
        <type>Phone</type>
    </fields>
    <label>zb1</label>
    <nameField>
        <label>zb1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zb1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>